--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -11,34 +11,39 @@
         android:layout_height="match_parent"
         android:orientation="vertical" >
 
-	    <Button
-	        android:id="@+id/connect_db_button"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:text="Connect with Dropbox" />
+        <Button
+            android:id="@+id/connect_db_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/blue_button"
+            android:text="Connect with Dropbox" />
 
 	    <Button
 	        android:id="@+id/select_photos_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
+	        android:background="@drawable/blue_button"
 	        android:text="Select photos" />
 
 	    <Button
 	        android:id="@+id/sync_db_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
+	        android:background="@drawable/blue_button"
 	        android:text="Sync with Dropbox" />
 
 	    <Button
 	        android:id="@+id/create_website_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
+	        android:background="@drawable/blue_button"
 	        android:text="Create website" />
 	    	    	    	    	    	    	        
 	    <Button
 	        android:id="@+id/test_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
+	        android:background="@drawable/blue_button"
 	        android:text="Test me" />
 	    
 	</LinearLayout>
