--- a/res/layout/site_main.xml
+++ b/res/layout/site_main.xml
@@ -87,7 +87,14 @@
             android:background="@drawable/blue_button"
             android:text="Generate Website!" 
             android:onClick="genWebsite" />
-
+        <EditText
+            android:id="@+id/tinyurl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:editable="false"
+            android:textIsSelectable="true"
+            android:ems="10" />
+        
     </LinearLayout>
 
 </FrameLayout>
