changing design and readme

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,6 +12,8 @@
         android:orientation="vertical" >
 
         <Button
+            style="@style/buttonStyle"
+            android:layout_marginTop="30dip"
             android:id="@+id/connect_db_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -19,6 +21,7 @@
             android:text="Connect with Dropbox" />
 
 	    <Button
+	        style="@style/buttonStyle"
 	        android:id="@+id/select_photos_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
@@ -26,6 +29,7 @@
 	        android:text="Select photos" />
 
 	    <Button
+	        style="@style/buttonStyle"
 	        android:id="@+id/sync_db_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
@@ -33,6 +37,7 @@
 	        android:text="Sync with Dropbox" />
 
 	    <Button
+	        style="@style/buttonStyle"
 	        android:id="@+id/create_website_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
@@ -40,12 +45,14 @@
 	        android:text="Create website" />
 	    	    	    	    	    	    	        
 	    <Button
+	        style="@style/buttonStyle"
+	        android:visibility="gone"
 	        android:id="@+id/test_button"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
 	        android:background="@drawable/blue_button"
 	        android:text="Test me" />
-	    
+
 	</LinearLayout>
 
 </FrameLayout>
