--- a/res/layout/site_main.xml
+++ b/res/layout/site_main.xml
@@ -81,20 +81,18 @@
             android:layout_height="wrap_content" />
 
         <Button
-            style="@style/buttonStyle"
+            style="@style/blueButton"
             android:id="@+id/gen_website"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/blue_button"
             android:text="Generate Website!" 
             android:onClick="genWebsite" />
-        <EditText
+        <TextView
             android:id="@+id/tinyurl"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:editable="false"
             android:gravity="center"
-            android:textIsSelectable="true"
             android:ems="10" />
         
     </LinearLayout>
