--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -21,6 +21,7 @@
         <item name="android:layout_marginRight">60dip</item>
         <item name="android:layout_marginTop">15dip</item>
         <item name="android:layout_marginBottom">15dip</item>
+        <item name="android:padding">10dip</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:background">@drawable/blue_button</item>
     </style>
@@ -29,8 +30,20 @@
         <item name="android:layout_marginRight">60dip</item>
         <item name="android:layout_marginTop">15dip</item>
         <item name="android:layout_marginBottom">15dip</item>
+        <item name="android:padding">10dip</item>
         <item name="android:textColor">#ffffff</item>
         <item name="android:background">@drawable/purple_button</item>
     </style>
+    <style name="galleryButton">
+        <item name="android:layout_marginLeft">15dip</item>
+        <item name="android:layout_marginRight">15dip</item>
+        <item name="android:layout_marginTop">10dip</item>
+        <item name="android:layout_marginBottom">10dip</item>
+        <item name="android:padding">10dip</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:textColor">#ffffff</item>
+        <item name="android:background">@drawable/blue_button</item>
+    </style>
+    
     
 </resources>
