--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -47,6 +47,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
+            android:textSize="20sp"
             android:autoLink="web"
             />
 	    	    
