--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,77 +12,72 @@
         android:orientation="vertical" >
 
         <Button
-            style="@style/blueButton"
-            android:layout_marginTop="30dip"
             android:id="@+id/connect_db_button"
+            style="@style/blueButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="30dip"
             android:text="Connect with Dropbox" />
 
-	    <Button
-	        style="@style/blueButton"
-	        android:id="@+id/select_photos_button"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:text="Step 1: Select photos" />
+        <Button
+            android:id="@+id/select_photos_button"
+            style="@style/blueButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Step 1: Select photos" />
 
-	    <Button
-	        style="@style/blueButton"
-	        android:id="@+id/create_website_button"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:text="Step 2: Create website" />
-	    	    	    	    	    	    	        
-	    <Button
-	        style="@style/blueButton"
-	        android:id="@+id/test_button"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:text="Test me"
-	        android:visibility="gone"
-	        />
+        <Button
+            android:id="@+id/create_website_button"
+            style="@style/blueButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Step 2: Create website" />
+
+        <Button
+            android:id="@+id/test_button"
+            style="@style/blueButton"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Test me"
+            android:visibility="visible" />
 
         <TextView
             android:id="@+id/tinyurl_main"
-            android:layout_margin="10dip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textSize="20sp"
+            android:layout_margin="10dip"
             android:autoLink="web"
-            android:text="http://tinyurl.com/kmh9fjm"
-            />
+            android:gravity="center"
+            android:textSize="20sp" />
+
         <LinearLayout
-	        android:id="@+id/llBottomContainer"
-	        android:layout_width="fill_parent"
-	        android:layout_height="wrap_content"
-	        android:orientation="horizontal"
-	        android:layout_marginLeft="60dip"
-	        android:layout_marginRight="60dip"
-	        android:padding="5dp" >
+            android:id="@+id/llBottomContainer"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="60dip"
+            android:layout_marginRight="60dip"
+            android:orientation="horizontal"
+            android:padding="5dp" >
 
-			<Button
-			    android:id="@+id/copyButton"
-			    style="@style/actionButton"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:drawableLeft="@drawable/ic_action_copy"
-		        android:text="copy"
-		        android:layout_marginRight="20dip"
-		        
-		        />
+            <Button
+                android:id="@+id/copyButton"
+                style="@style/actionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="20dip"
+                android:drawableLeft="@drawable/ic_action_copy"
+                android:text="copy"
+                android:visibility="invisible" />
 
-			<Button
-			    android:id="@+id/shareButton"
-			    style="@style/actionButton"
-		        android:layout_width="wrap_content"
-		        android:layout_height="wrap_content"
-		        android:drawableLeft="@drawable/ic_action_share"
-		        android:text="share"
-		        
-		        />
-		</LinearLayout>
-	    	    
-	</LinearLayout>
+            <Button
+                android:id="@+id/shareButton"
+                style="@style/actionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:drawableLeft="@drawable/ic_action_share"
+                android:text="share"
+                android:visibility="invisible" />
+        </LinearLayout>
+    </LinearLayout>
 
 </FrameLayout>
