--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -12,40 +12,47 @@
         android:orientation="vertical" >
 
         <Button
-            android:id="@+id/connect_db_button"
-            style="@style/blueButton"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dip"
-            android:text="Connect with Dropbox" />
-
-        <Button
             android:id="@+id/select_photos_button"
             style="@style/blueButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Step 1: Select photos" />
+            android:layout_marginTop="90dip"
+            android:text="Select photos" />
 
         <Button
             android:id="@+id/create_website_button"
             style="@style/blueButton"
+            android:layout_marginTop="25dip"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Step 2: Create website" />
+            android:text="Create website" />
 
-        <Button
+<!--         <Button
             android:id="@+id/test_button"
             style="@style/blueButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Test me"
             android:visibility="visible" />
-
+ -->
+        <TextView
+            android:id="@+id/transform"
+            android:layout_marginTop="30dip"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:textColor="#333333"
+            android:text="transform your moments"
+            android:autoLink="web"
+            android:paddingTop="30dp"
+            /> 
         <TextView
             android:id="@+id/tinyurl_main"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="10dip"
+            android:layout_marginBottom="10dip"
+            android:layout_marginTop="30dip"
             android:autoLink="web"
             android:gravity="center"
             android:textSize="20sp" />
