--- a/res/layout/website_form.xml
+++ b/res/layout/website_form.xml
@@ -31,6 +31,7 @@
 
         <TextView
             android:id="@+id/textView2"
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Description (optional):"
@@ -74,6 +75,7 @@
         
         <TextView
             android:id="@+id/textView4"
+            android:layout_marginTop="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Include quotes about:"
@@ -81,12 +83,14 @@
 
         <Spinner
             android:id="@+id/quote_cat"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
         <Button
             style="@style/blueButton"
             android:id="@+id/gen_website"
+            android:layout_marginTop="30dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/blue_button"
